--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
 
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
 
+        <h3>| &nbsp;&nbsp; FROM DESPICABLE ME 2 &nbsp;&nbsp; |</h3>
         <!-- Level 1 'HAPPY' Header -->
 
         <!-- Level 3 'WRITTEN BY...' Header -->
-
+          <h3></h3>
         <!-- pararaph text 'PUBLISHED BY...' -->
 
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
